     screen
   * bugfix: units will now fade out properly at the end of death animations
   * added new experimental new unit location in the hex
   * tiles with overlays are also properly shown if compiled with
     --enable-tinygui (bug #8720 patch #697)
   * rewrote the halo render engine which solves a few minor glitches but 
     most importantly speeds up the drawing of the halos.
* language and i18n:
   * updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
     Hungarian, Italian, Norwegian, Portuguese (Brazil)
   * new translations: Indonesian
 * multiplayer:
   * revised maps: Castle Hopping Isle
   * The countdown timer is now coloured properly when the remaining time is 
     less than 2 minutes.
 * units:
    * balancing changes:
      * converted the cold resistance of the Elvish Sorceress line to a holy
        resistance
      * decreased the holy resistance of the Orcish Assassin line from 20% to 0%
      * decreased the holy resistance of the Sky Drake from 20% to -30%
      * decreased the holy resistance of the Hurricane Drake from 20% to -30%
      * decreased the holy resistance of the Mermaid Priestess from 40% to 20%
      * decreased the holy resistance of the Mermaid Diviner from 60% to 40%
 * terrain system
   * added layer support to the terrain letters, two layers are supported
 * tutorial
   * increased number of trusn from 20 to 26 in the 2nd scenario
 * WML engine
   * new [own_village] condition to check if someone own a particular village
   * new [store_villages] tag to store village locations
   * all [store_*] tags get a default variable name
   * use complex variable substitution almost everywhere
   * new key for [set_variable], literal=, to avoid variable substitution
   * [effect] can now toggle the zoc
   * new key for [variable], boolean_equals=, to test boolean equality
   * remove some old backward compatibility support
   * set_name in attack modification [effect] no longer change the weapon's 