@@ -14,6 +14,8 @@ Version 1.3.1+svn:
       screen.
     * Added new experimental new unit location in the hex.
     * Added some more speed optimizations.
+    * Units are scaled properly when zooming, also with tiny gui.
+    * Haloes in tiny gui are now scaled (before unscaled, thus a factor 2 bigger as intended).
 * Units changes and balancing:
     * Converted the cold resistance of the Elvish Sorceress line to a holy
       resistance.
